--- a/src/css/output.css
+++ b/src/css/output.css
@@ -451,6 +451,29 @@ body{
   color: rgb(188 188 188 / var(--tw-text-opacity));
 }
 
+.xl-text{
+  font-size: 2.5rem;
+  font-weight: 500;
+  line-height: 3.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(34 34 34 / var(--tw-text-opacity));
+}
+
+:is(.dark .xl-text){
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.lg-text{
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+}
+
+.md-text{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .sm-text{
   font-size: 0.75rem;
   font-weight: 500;
@@ -590,6 +613,14 @@ body{
   }
 }
 
+.mt-xl{
+  margin-top: 8.75rem;
+}
+
+.mt-lg{
+  margin-top: 2.5rem;
+}
+
 .inline-block{
   display: inline-block;
 }
@@ -602,8 +633,20 @@ body{
   display: none;
 }
 
+.max-w-sm{
+  max-width: 24rem;
+}
+
+.max-w-md{
+  max-width: 28rem;
+}
+
 .cursor-pointer{
   cursor: pointer;
+}
+
+.flex-col{
+  flex-direction: column;
 }
 
 .items-center{
@@ -618,8 +661,20 @@ body{
   gap: 1.875rem;
 }
 
+.gap-sm{
+  gap: 0.625rem;
+}
+
+.gap-xl{
+  gap: 8.75rem;
+}
+
 .border-b-2{
   border-bottom-width: 2px;
+}
+
+.border-t{
+  border-top-width: 1px;
 }
 
 .border-accent{
@@ -627,12 +682,39 @@ body{
   border-color: rgb(155 81 224 / var(--tw-border-opacity));
 }
 
+.border-dark-gray{
+  --tw-border-opacity: 1;
+  border-color: rgb(51 51 51 / var(--tw-border-opacity));
+}
+
 .border-transparent{
   border-color: transparent;
 }
 
+.fill-dark-gray{
+  fill: #333333;
+}
+
+.py-sm{
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
+.py-md{
+  padding-top: 1.875rem;
+  padding-bottom: 1.875rem;
+}
+
 .pt-sm{
   padding-top: 0.625rem;
+}
+
+.pb-md{
+  padding-bottom: 1.875rem;
+}
+
+.pb-sm{
+  padding-bottom: 0.625rem;
 }
 
 .text-3{
@@ -661,9 +743,58 @@ body{
   color: transparent;
 }
 
+@media (min-width: 768px){
+  .md\:xl-text{
+    font-size: 2.5rem;
+    font-weight: 500;
+    line-height: 3.75rem;
+    --tw-text-opacity: 1;
+    color: rgb(34 34 34 / var(--tw-text-opacity));
+  }
+
+  :is(.dark .md\:xl-text){
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .md\:lg-text{
+    font-size: 1.5rem;
+    line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:xl-text{
+    font-size: 2.5rem;
+    font-weight: 500;
+    line-height: 3.75rem;
+    --tw-text-opacity: 1;
+    color: rgb(34 34 34 / var(--tw-text-opacity));
+  }
+
+  :is(.dark .lg\:xl-text){
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .lg\:lg-text{
+    font-size: 1.5rem;
+    line-height: 2.25rem;
+  }
+}
+
 .hover\:border-accent:hover{
   --tw-border-opacity: 1;
   border-color: rgb(155 81 224 / var(--tw-border-opacity));
+}
+
+.hover\:fill-accent:hover{
+  fill: #9B51E0;
+}
+
+.hover\:text-accent:hover{
+  --tw-text-opacity: 1;
+  color: rgb(155 81 224 / var(--tw-text-opacity));
 }
 
 .peer\/dark:checked ~ .peer-checked\/dark\:border-accent{
@@ -684,16 +815,86 @@ body{
   font-weight: 700;
 }
 
+:is(.dark .dark\:border-light-gray){
+  --tw-border-opacity: 1;
+  border-color: rgb(188 188 188 / var(--tw-border-opacity));
+}
+
+:is(.dark .dark\:fill-light-gray){
+  fill: #BCBCBC;
+}
+
+:is(.dark .hover\:dark\:fill-accent):hover{
+  fill: #9B51E0;
+}
+
+@media (min-width: 640px){
+  .sm\:justify-start{
+    justify-content: flex-start;
+  }
+}
+
 @media (min-width: 768px){
+  .md\:mt-xl{
+    margin-top: 8.75rem;
+  }
+
   .md\:block{
     display: block;
+  }
+
+  .md\:max-w-md{
+    max-width: 28rem;
+  }
+
+  .md\:max-w-sm{
+    max-width: 24rem;
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:justify-start{
+    justify-content: flex-start;
+  }
+
+  .md\:gap-md{
+    gap: 1.875rem;
+  }
+
+  .md\:gap-xl{
+    gap: 8.75rem;
+  }
+
+  .md\:py-md{
+    padding-top: 1.875rem;
+    padding-bottom: 1.875rem;
   }
 
   .md\:pt-md{
     padding-top: 1.875rem;
   }
 
+  .md\:pb-md{
+    padding-bottom: 1.875rem;
+  }
+
   .md\:text-4{
     font-size: 2rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:mt-xl{
+    margin-top: 8.75rem;
+  }
+
+  .lg\:max-w-md{
+    max-width: 28rem;
+  }
+
+  .lg\:gap-xl{
+    gap: 8.75rem;
   }
 }
