--- a/src/css/input.css
+++ b/src/css/input.css
@@ -42,4 +42,8 @@
   .section-common {
     @apply my-lg lg:my-xl;
   }
+
+  .arrow-before {
+    @apply before:absolute before:bottom-2 before:left-0 before:top-0 before:m-auto before:block before:h-3 before:w-3 before:rotate-45 before:border-b-2 before:border-r-2 before:border-dark-gray peer-checked/faq:before:bottom-0 peer-checked/faq:before:top-2 peer-checked/faq:before:-rotate-[135deg] dark:before:border-white;
+  }
 }
